# cpp-search-engine

./: 1.txt  CMakeLists.txt  DirectoryScanner.cc  DirectoryScanner.h  KeywordProcessor.cc  KeywordProcessor.h  KeywordRecommender.cc  KeywordRecommender.h  LengthHeaderCodec.cc  LengthHeaderCodec.h  Logger.h  PageProcessor.cc  PageProcessor.h  README.md  WebSearcher.cc  WebSearcher.h  a.out  build.sh  client  client.cc  common.h  main.cc  makeCilent.sh  server.cc  server.h
test/cppjieba/: a.out  cppjieba_cut_words.cc
test/simhash/: a.out  simhash_demo.cc
